--- a/views/map.ejs
+++ b/views/map.ejs
@@ -58,7 +58,7 @@
 
       function getPoints() {
 		var myStringArray = [[37.782551, -122.445368], [37.751266, -122.403355]];//This is the data array
-        myStringArray = [<%=locs%>];
+        myStringArray = <%locs%>;
         var arrayLength = myStringArray.length;
 		var finalArray = [];
 			for (var i = 0; i < arrayLength; i++){
