Attempting to use EJS for API

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -58,13 +58,18 @@
 
       function getPoints() {
 		var myStringArray = [[37.782551, -122.445368], [37.751266, -122.403355]];//This is the data array
-        myStringArray = <%locs%>;
-        var arrayLength = myStringArray.length;
-		var finalArray = [];
-        for (var i = 0; i < arrayLength; i++){
-			finalArray.push(new google.maps.LatLng(myStringArray[i][0], myStringArray[i][1]));
-		}
-		return finalArray;
+        <%var locations = []%>
+        <%for(loc of locs) {%>
+            locations.push(new google.maps.LatLng(loc[0], loc[1])); %>
+        <%}%>
+        return <%locations%>;
+        <!--myStringArray = ;-->
+        <!--var arrayLength = myStringArray.length;-->
+		<!--var finalArray = [];-->
+        <!--for (var i = 0; i < arrayLength; i++){-->
+			<!--finalArray.push(new google.maps.LatLng(myStringArray[i][0], myStringArray[i][1]));-->
+		<!--}-->
+//		return finalArray;
       }
 
       function initMap() {
