--- a/views/map.ejs
+++ b/views/map.ejs
@@ -60,7 +60,7 @@
 		var myStringArray = [[37.782551, -122.445368], [37.751266, -122.403355]];//This is the data array
         <%var locations = []%>
         <%for(loc of locs) {%>
-            locations.push(new google.maps.LatLng(loc[0], loc[1])); %>
+            <%locations.push(new google.maps.LatLng(loc[0], loc[1])); %>
         <%}%>
         return <%locations%>;
         <!--myStringArray = ;-->
