Fixed more syntax

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -63,7 +63,7 @@
         for(loc of dblocs) {
             locations.push(new google.maps.LatLng(loc[0], loc[1]));
         }
-        return <%locations%>;
+        return locations;
         <!--myStringArray = ;-->
         <!--var arrayLength = myStringArray.length;-->
 		<!--var finalArray = [];-->
