--- a/views/map.ejs
+++ b/views/map.ejs
@@ -76,7 +76,7 @@
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
           zoom: 13,
-          center: {lat: 37.775, lng: -122.434},
+          center: {lat: 34.0776, long: -118.308},
           mapTypeId: 'satellite'
         });
 
