moved the bootstrap to the proper place

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -146,7 +146,7 @@
     <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="css/bootstrap.min.js"></script>
 
 </body>
 
