--- a/views/index.ejs
+++ b/views/index.ejs
@@ -110,7 +110,7 @@
                         looking to buy a house.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
+                    <img class="img-responsive" src="img/CrimeTapeSmall.jpg" alt="">
                 </div>
             </div>
 
