--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,7 +79,7 @@
                                 <a href="https://github.com/LeaveItToBeaves/CrimeStats" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                             </li>
                             <li>
-                                <a href="map" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Check out the Map!</span></a>
+                                <a href="/map" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Check out the Map!</span></a>
                             </li>
 
                         </ul>
