Let's not forget daniel

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,7 +71,7 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>Crime Statistics Visualizer</h1>
-                        <h3>A Project made by Micheal Beaver, Ryan Andrews, David Crow, Joseph Hartgrave, and Kyle Knudsen</h3>
+                        <h3>A Project made by Micheal Beaver, Ryan Andrews, David Crow, Joseph Hartgrave, Daniel Holtzclaw, and Kyle Knudsen</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
 
